# bluebikes-importer

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  stations.py
.github/workflows/: python_test.yml
examples/: legacy_station_input.csv  overlapping_stations.csv
src/: download.py  insert.py  sql.py
src/bluebikes/: download.py  insert.py  main.py  sql.py  stations.py
src/bluebikes/legacy_stations/: README.md  mapping.py  station_mapping_input.csv  stations_query.sql
src/bluebikes/published_stations/: stations.py
src/bluebikes/stations/legacy/: README.md  legacy_input_query.sql  mapping.py
src/bluebikes/stations/published/: README.md  process.py
src/bluebikes/stations/remediation/: README.md  conflicts.py  overlap_query.sql
src/models/: ride.py  station.py
src/tools/: legacy_station_mapping.py  manual_stations.py  station_mapping.csv
src/tools/legacy_station_mapping/: README.md  legacy_station_mapping.py  station_mapping_input.csv
tests/: conftest.py  test_insert.py  test_legacy_station_mapping.py  test_published_stations.py  test_station_remediation.py
tests/test_files/csvs/: 201501_old_format_tripdata.csv  202404_new_format_tripdata.csv  test_station_mapping.csv
tests/test_files/legacy_stations/: mapping.csv
tests/test_files/published_stations/: Hubway_Stations_2011_2016.csv  Hubway_Stations_as_of_July_2017.csv  current_bluebikes_stations.csv  previous_Hubway_Stations_as_of_July_2017.csv
tests/test_files/remedial_stations/: station_input.csv
