[tool.poetry]
name = "bluebikes"
version = "0.1.0"
description = ""
authors = ["Matthew Tschiegg", "Virginia Partridge"]
readme = "README.md"
packages = [{include = "bluebikes", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<=4.0.0"
boto3 = "1.34.79"
botocore = "1.34.79"
tqdm = "4.66.2"
datasette = "0.64.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"


[tool.poetry.scripts]
download_bluebikes = "bluebikes.main:main_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
