[tool.poetry]
name = "bluebikes"
version = "0.0.3"
description = ""
authors = ["Matthew Tschiegg", "Virginia Partridge"]
readme = "README.md"
packages = [{include = "bluebikes", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<=4.0.0"
boto3 = "1.34.153"
botocore = "1.34.153"
tqdm = "4.66.5"
datasette = "0.64.8"
pandas = "^2.2.2"
haversine = "^2.8.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[tool.poetry.scripts]
download_bluebikes = "bluebikes.main:main_cli"
legacy_station_mapping = "bluebikes.stations.legacy.mapping:main_cli"
published_station_processing = "bluebikes.stations.published.process:main_cli"
station_conflict_remediation = "bluebikes.stations.remediation.conflicts:main_cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
